style.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@300&display=swap');

/*@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap');*/

*{
    box-sizing: border-box;
}


body{
    background-color: black;
    color: white;
    font-family: 'Cormorant+Upright';
    margin-top: 0;
    padding: 0;
    background-size: cover;
}



/* Navbar */

.topnav{
    overflow: hidden;
}

.top-ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
}


li{
    display: inline-block;
    padding: 10px 9px 10px 9px;
}

a{
    margin-top: 0px;
    padding: 0px;
    margin-bottom: 0px;
    margin-left: 70px;
    cursor: pointer;
    color: white;
    font-size: small;
    text-decoration: none;
}


.nav-logo{
    margin-top: 30px;
    float: left;
    display: inline;
    padding-left: 25px;
}

.vector-5{
    margin-top: 10px;
    margin-right: 10px;
}

/* First section of the website */

.second-container{
    margin-top: 60px;
    display: grid;
    grid-template-columns: 2fr 2fr 1fr;
    align-items: center;
}

.parent-image{
    position: relative;
    top: 0;
    left: 0;
}

.first-food{
    position: absolute;
    bottom: 60px;
    left: 500px;
    border: 5px ;
    width: 350px;
    height: 400px;
    margin-left: 200px;
    z-index: 2;
}

.rectangle1-img{
    position: relative;
    bottom: 3px;
    right: 50px;
    border: 1px;
    margin-left: 400px;
    width: 260px;
    height: 270px;
}

.rectangle-img{
    position: relative;
    top: -80px;
    left: 125px;
    border: 1px;
    margin-left: 100px;
    width: 260px;
    height: 240px;
}



.scroll-img{
    margin-left: 70px;
    margin-top: 350px;
}

.writeups{
    margin-left: 150px;
    margin-bottom: 200px;
}

.writeups1{
    font-size: 10px;
    color: #ffff;
}

.writeups2{
    font-style: italic;
    font-weight: 700;
    font-size: 30px;
    color: #DCCA87;
    line-height: 60px;
}

.writeups3{
    color: #AAAA;
    font-size: 10px;
    line-height: 18px;
}


.vector1-text{
    margin-left: 0px;
    width: 30px;
}

.explore-button{
    margin-left: 0px;
    background-color: #DCCA87 ;
    padding: 10px 18px;
    cursor: pointer;
    border: 1px solid;
}

.scroll-text{
    padding-top: 5px;
    margin-left: 1160px;
    color: #DCCA87;
}

.scroll-date{
    text-align: center;
    font-size: 10px;
}

/* Second section of the website */

.About{
    background-image: url(Background.png)  ;
    background-size: cover;
}

.third-container{
    display: flex;
    flex-direction: column;
    align-items: center;
}

.third-image{
    position: relative;
}

.G-image{
    position: absolute;
    width: 250px;
    height: 450px;
    padding-top: 100px;
}


.knife-image{
    position: relative;
    width: 60px;
    height: 650px;
    margin-left: 100px;
    padding-top: 60px;
    padding-bottom: 80px;
}

.third-text1{
    position: relative;
    padding-right: 700px;
    bottom: -400px;

}

.third-text2{
    position: absolute;
    top: 1150px;
    padding-left: 800px;
    text-align: center;
}

